--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "author": "Derek Worthen",
+  "author": "Serge Joukov",
   "license": "MIT",
-  "name": "yaml-front-matter",
-  "description": "yaml front matter for JS. Parse yaml or JSON from the beginning of files.",
+  "name": "yaml-front-matter-no-docs",
+  "description": "yaml front matter for JS. Parse yaml or JSON from the beginning of files. Forked version of the original package with no docs.",
   "main": "dist/yamlFront.js",
   "module": "src/index.js",
-  "version": "4.1.1",
+  "version": "4.1.2",
   "keywords": [
     "yaml",
     "front matter",
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dworthen/js-yaml-front-matter"
+    "url": "git+https://github.com/sergejkv/js-yaml-front-matter"
   },
   "dependencies": {
     "commander": "^6.2.0",
